tests/ui/stack_fail_when_co_is_static.stderr
error[E0597]: `shelf` does not live long enough
  --> $DIR/stack_fail_when_co_is_static.rs:8:5
   |
8  |     let_gen_using!(gen, producer);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     argument requires that `shelf` is borrowed for `'static`
9  |     let _ = gen;
10 | }
   | - `shelf` dropped here while still borrowed
   |
   = note: this error originates in the macro `let_gen_using` (in Nightly builds, run with -Z macro-backtrace for more info)
